# uol-firstyear-proj

./: CMakeLists.txt  README.md  build.sh  run.sh  test.sh
database/: book_db.txt  loan_db.txt  user_db.txt
include/library_management/: book_management.h  loans_management.h  user_management.h
src/: CMakeLists.txt
src/library_management/: CMakeLists.txt  book_management.c  loans_management.c  user_management.c
src/program/: CMakeLists.txt  interface.c  interface.h  main.c
testfile/: bookdb_loadtest.txt  loandb_loadtest.txt  userdb_loadtest.txt
tests/: CMakeLists.txt  lib_mgmt_testsuite.h  test_book_management.c  test_libmgmt_runner.c  test_loans_management.c  test_user_management.c
tests/testfiles/: bookdb_loadtest.txt
